--- a/SCEUCN-APP/app/src/main/res/values/colors.xml
+++ b/SCEUCN-APP/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorA_Primary">#3F51B5</color>
+    <color name="colorA_PrimaryDark">#283593</color>
+    <color name="colorA_Accent">#1E88E5</color>
 </resources>
