--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -129,4 +129,20 @@
             android:text="Tipo Logo" />
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/et_server_ip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:inputType="number|numberDecimal"
+        android:digits="0123456789."
+        android:ems="10"
+        android:hint="Server IP"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_detalles" />
+
 </android.support.constraint.ConstraintLayout>
