--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -133,16 +133,26 @@
         android:id="@+id/et_server_ip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="64dp"
-        android:inputType="number|numberDecimal"
         android:digits="0123456789."
         android:ems="10"
         android:hint="Server IP"
+        android:inputType="number|numberDecimal"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_detalles" />
+
+    <Button
+        android:id="@+id/b_set_server_ip"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="Set IP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/et_server_ip"
         app:layout_constraintTop_toBottomOf="@+id/ll_detalles" />
 
 </android.support.constraint.ConstraintLayout>
