--- a/SCEUCN-APP/app/src/main/res/values/styles.xml
+++ b/SCEUCN-APP/app/src/main/res/values/styles.xml
@@ -16,4 +16,14 @@
         <item name="colorAccent">@color/colorA_Accent</item>
     </style>
 
+    <style name="SuccessButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:backgroundTint">@color/colorSuccess</item>
+        <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="CancelButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:backgroundTint">@color/colorCancel</item>
+        <item name="android:textColor">#FFF</item>
+    </style>
+
 </resources>
