--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,30 @@
     android:focusable="true"
     android:focusableInTouchMode="true">
 
+    <!--app:navigationIcon="@drawable/logo_ucn"-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimaryDark"
+        android:elevation="4dp"
+        android:minHeight="?attr/actionBarSize"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:subtitle="Universidad Católica del Norte"
+        app:subtitleTextColor="@android:color/background_light"
+        app:title="SCE UCN"
+        app:titleTextColor="@android:color/background_light"
+        tools:ignore="MissingConstraints" />
+
     <EditText
         android:id="@+id/et_patente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="Escriba una patente..."
@@ -21,7 +39,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
     <ListView
         android:id="@+id/lv_vehiculos"
