Updated modelo (Logo, Contrato, Porteria, Rol). Added metodos para convertir en ModelConverter. Updated disenio de items del listview. Fixed color de toolbar.

--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,21 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorA_Primary"
         android:elevation="4dp"
         android:minHeight="?attr/actionBarSize"
         app:contentInsetStart="5dp"
-        app:titleMarginStart="10dp"
         app:contentInsetStartWithNavigation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:logo="@mipmap/ic_logo_ucn_1"
 
+        app:logo="@mipmap/ic_logo_ucn_1"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:subtitle="Universidad Católica del Norte"
         app:subtitleTextColor="@android:color/background_light"
         app:title="SCE UCN"
+        app:titleMarginStart="10dp"
         app:titleTextColor="@android:color/background_light"
         tools:ignore="MissingConstraints" />
 
