--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         app:logo="@mipmap/ic_logo_ucn_1"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:subtitle="Universidad Católica del Norte"
@@ -32,11 +31,13 @@
 
     <EditText
         android:id="@+id/et_patente"
+        android:layout_marginTop="24dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
+        android:fontFamily="@font/fe_font"
         android:hint="Escriba una patente..."
         android:inputType="textPersonName"
         android:textAlignment="center"
