--- a/SCEUCN-APP/app/src/main/res/layout/dialog_vehiculo.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/dialog_vehiculo.xml
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:text="Logo:"
+        android:text="Último Logo:"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/secondary_text_light"
         android:textStyle="bold" />
