--- a/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
@@ -72,6 +72,22 @@
         card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_nombre_persona"
         tools:layout_editor_absoluteX="0dp" />
 
+    <ImageView
+        android:id="@+id/avatar_image"
+        android:layout_width="5dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="200dp"
+        android:background="@drawable/status_bar"
+        android:padding="4dp"
+        android:scaleType="centerCrop"
+        card_view:layout_constraintBottom_toBottomOf="parent"
+        card_view:layout_constraintEnd_toEndOf="parent"
+        card_view:layout_constraintHorizontal_bias="0.157"
+        card_view:layout_constraintStart_toEndOf="@+id/cv_tv_nombre_persona"
+        card_view:layout_constraintTop_toTopOf="parent"
+        card_view:layout_constraintVertical_bias="0.565" />
+
+
 </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
