--- a/SCEUCN-APP/app/src/main/res/drawable/back.xml
+++ b/SCEUCN-APP/app/src/main/res/drawable/back.xml
@@ -7,5 +7,5 @@
   -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <solid android:color="@android:color/white" />
-    <stroke android:width="2dip" android:color="@android:color/black"/>
+    <stroke android:width="2dp" android:color="@android:color/black"/>
 </shape>
