--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:background="@color/white"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
-        android:fontFamily="@font/prod_sans_bold"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorA_Primary"
         android:elevation="4dp"
+        android:fontFamily="@font/prod_sans_bold"
         android:minHeight="?attr/actionBarSize"
         app:contentInsetStart="5dp"
         app:contentInsetStartWithNavigation="0dp"
@@ -32,10 +33,10 @@
 
     <EditText
         android:id="@+id/et_patente"
-        android:layout_marginTop="24dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:fontFamily="@font/fe_font"
@@ -48,8 +49,6 @@
 
     <ListView
         android:id="@+id/lv_vehiculos"
-        android:divider="@android:color/transparent"
-        android:fontFamily="@font/prod_sans_reg"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
@@ -78,11 +77,11 @@
     <Button
         android:id="@+id/b_set_server_ip"
         android:layout_width="0dp"
-        android:fontFamily="@font/prod_sans_reg"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/prod_sans_reg"
         android:text="Set IP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
