--- a/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
@@ -25,70 +25,67 @@
         card_view:cardCornerRadius="24dp"
         tools:ignore="MissingConstraints">
 
-<android.support.constraint.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:paddingStart="16dp">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:paddingStart="16dp">
 
-    <TextView
-            android:id="@+id/cv_tv_patente"
-            android:fontFamily="@font/fe_font"
-            android:textColor="@android:color/black"
-            android:text="ca-fa-00"
-            android:textSize="20dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="9dp"
-            android:textAlignment="center"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:background="@drawable/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/cv_tv_patente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back"
+                android:fontFamily="@font/fe_font"
+                android:paddingStart="4dp"
+                android:paddingTop="4dp"
+                android:paddingEnd="4dp"
+                android:paddingBottom="9dp"
+                android:text="ca-fa-00"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="20dp" />
 
-    <TextView
-        android:id="@+id/cv_tv_nombre_persona"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:fontFamily="@font/prod_sans_reg"
-        android:text="Christian Farias Echeñique"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="15dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_patente"
-        tools:layout_editor_absoluteX="0dp" />
+            <TextView
+                android:id="@+id/cv_tv_nombre_persona"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/mp_reg"
+                android:text="Christian Antonio Farias Echeñique"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_patente"
+                tools:layout_editor_absoluteX="-2dp" />
 
-    <TextView
-        android:id="@+id/cv_tv_ult_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:fontFamily="@font/prod_sans_reg"
-        android:text="2019"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
-        android:textSize="15dp"
-        card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_nombre_persona"
-        tools:layout_editor_absoluteX="0dp" />
+            <TextView
+                android:id="@+id/cv_tv_id_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/mp_reg"
+                android:text="chinoXXX"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_nombre_persona"
+                tools:layout_editor_absoluteX="1dp" />
 
-    <ImageView
-        android:id="@+id/avatar_image"
-        android:layout_width="5dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="200dp"
-        android:background="@drawable/status_bar"
-        android:padding="4dp"
-        android:scaleType="centerCrop"
-        card_view:layout_constraintBottom_toBottomOf="parent"
-        card_view:layout_constraintEnd_toEndOf="parent"
-        card_view:layout_constraintHorizontal_bias="0.157"
-        card_view:layout_constraintStart_toEndOf="@+id/cv_tv_nombre_persona"
-        card_view:layout_constraintTop_toTopOf="parent"
-        card_view:layout_constraintVertical_bias="0.565" />
+            <ImageView
+                android:id="@+id/avatar_image"
+                android:layout_width="10dp"
+                android:layout_height="74dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/status_bar"
+                android:padding="4dp"
+                android:scaleType="centerCrop"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
