Added: Cardview en VehiculoAdapter, fuentes

--- a/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
@@ -50,12 +50,12 @@
                 android:id="@+id/cv_tv_nombre_persona"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/mp_reg"
                 android:text="Christian Antonio Farias Echeñique"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 card_view:layout_constraintTop_toBottomOf="@+id/cv_tv_patente"
                 tools:layout_editor_absoluteX="-2dp" />
 
@@ -63,9 +63,9 @@
                 android:id="@+id/cv_tv_id_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/mp_reg"
+                android:layout_marginTop="3dp"
                 android:text="chinoXXX"
+                android:fontFamily="@font/myriadpro_light"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="15dp"
