Fixed: Cardview, style, fuentes

--- a/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/ucn_blanco"
     android:focusable="true"
     android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
+        android:theme="@style/ToolbarTheme"
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorA_Primary"
+        android:background="@color/ucn_azuloscuro"
         android:elevation="4dp"
-        android:fontFamily="@font/prod_sans_bold"
         android:minHeight="?attr/actionBarSize"
         app:contentInsetStart="5dp"
         app:contentInsetStartWithNavigation="0dp"
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:fontFamily="@font/fe_font"
@@ -50,6 +51,7 @@
     <ListView
         android:id="@+id/lv_vehiculos"
         android:layout_width="match_parent"
+        android:padding="8dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/et_server_ip"
         app:layout_constraintEnd_toEndOf="parent"
