--- a/SCEUCN-APP/app/src/main/res/values/styles.xml
+++ b/SCEUCN-APP/app/src/main/res/values/styles.xml
@@ -28,4 +28,9 @@
         <item name="android:textColor">#FFF</item>
     </style>
 
+    <!-- styles.xml -->
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/mp_reg</item>
+    </style>
+
 </resources>
