--- a/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
+++ b/SCEUCN-APP/app/src/main/res/layout/layout_card.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="center"
         android:padding="24dp"
         android:paddingStart="24dp"
+        android:paddingEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         card_view:cardCornerRadius="12dp"
@@ -88,5 +89,11 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:layout_marginTop="0dp"
+        card_view:layout_constraintTop_toBottomOf="@+id/card_view"/>
 
 </android.support.constraint.ConstraintLayout>
