--- a/SCEUCN-WEB/Pages/_ViewImports.cshtml
+++ b/SCEUCN-WEB/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using SCEUCN_RAZOR
-@namespace SCEUCN_RAZOR.Pages
+@using SCEUCN_WEB
+@namespace SCEUCN_WEB.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
